# ccodex

./: .gitignore  .npmignore  README.md  compatibility.json  config.example.toml  install.sh  package-lock.json  package.json  tsconfig.build.json  tsconfig.json
.github/: dependabot.yml
.github/workflows/: build-relays.yml  ci.yml  release.yml
config/: compatibility.json  tsconfig.build.json  vitest.config.ts
contracts/architecture/: one-writer-debt.v1.json
examples/: config.toml
legal/: LICENSES.md  THIRD_PARTY_NOTICES.md
relay/: Cargo.toml
relay/src/: main.rs
release/: Dockerfile.relay  compatibility.schema.json  generate-cargo-sbom.mjs  generate-manifest.mjs  generate-notices.mjs  legal-gate.mjs  promote.mjs  publish-tarballs.mjs  set-version.mjs  verify-packages.mjs
scripts/: build-lifecycle-contract-inventory.mjs  build-linux-relay.sh  build-relay.sh  check-one-writer-architecture.mjs  check-public-tree.mjs  codex-assets.mjs  generate-protocol.mjs  generate-response-item-schema.mjs  install-local.sh  postinstall.mjs  probe-claude-options.mjs  probe-daemon.mjs  probe-package.sh  probe-proxy.mjs  probe-public-package.sh  uninstall-local.sh  uninstall.sh  update-codex-pin.mjs  update-shim.sh
scripts/lib/: one-writer-gate.mjs
src/claude/: asyncQueue.ts  commandActions.ts  compactCommand.ts  environment.ts  fileSnapshots.ts  goalTools.ts  hookMapper.ts  inputMapper.ts  interruptCompat.ts  modelCatalog.ts  modelSelection.ts  permissionPolicy.ts  queryFactory.ts  rateLimits.ts  responseItemValidation.ts  resultClassifier.ts  service.ts  sessionRegistry.ts  shellSupervisor.ts  statusCommand.ts  toolMapper.ts  transcriptBrancher.ts
src/cli/: args.ts  delegate.ts  main.ts
src/codex/: stockConnection.ts  stockProcess.ts
src/compatibility/: probe.ts
src/config/: config.ts
src/daemon/: daemon.ts  (+5 more)
(+159 files in other folders)
