[package]
name = "codex-hybrid-remote-relay"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
futures = "0.3"
openssl = { version = "0.10", features = ["vendored"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "signal", "sync"] }
tokio-tungstenite = "0.28"
tokio-util = "0.7.18"
tracing = "0.1"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }

# Exact source revision behind npm @openai/codex 0.144.6 / rust-v0.144.6.
codex-app-server-protocol = { git = "https://github.com/openai/codex.git", rev = "1e66aaa95b5ab39d3ef3057cd50bdecd576a8356" }
codex-app-server-transport = { git = "https://github.com/openai/codex.git", rev = "1e66aaa95b5ab39d3ef3057cd50bdecd576a8356" }
codex-core = { git = "https://github.com/openai/codex.git", rev = "1e66aaa95b5ab39d3ef3057cd50bdecd576a8356" }
codex-login = { git = "https://github.com/openai/codex.git", rev = "1e66aaa95b5ab39d3ef3057cd50bdecd576a8356" }
codex-shell-command = { git = "https://github.com/openai/codex.git", rev = "1e66aaa95b5ab39d3ef3057cd50bdecd576a8356" }

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = "thin"
strip = true

[patch.crates-io]
tokio-tungstenite = { git = "https://github.com/openai-oss-forks/tokio-tungstenite", rev = "132f5b39c862e3a970f731d709608b3e6276d5f6" }
tungstenite = { git = "https://github.com/openai-oss-forks/tungstenite-rs", rev = "9200079d3b54a1ff51072e24d81fd354f085156f" }

[patch."ssh://git@github.com/openai-oss-forks/tungstenite-rs.git"]
tungstenite = { git = "https://github.com/openai-oss-forks/tungstenite-rs", rev = "9200079d3b54a1ff51072e24d81fd354f085156f" }
